--- a/3D_printing.ipynb
+++ b/3D_printing.ipynb
@@ -1,38 +1,26 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 73
-        },
-        "id": "I1i1XBoO7CIU",
-        "outputId": "68e0e76d-ee7f-4cd8-f998-fb4963c9eff7"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/Colab Notebooks/3D_Printing\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\n# Download dataset\\n!pip install kaggle\\n\\nimport os\\nos.environ[\"KAGGLE_CONFIG_DIR\"] = \"/content/drive/MyDrive/Colab Notebooks/\"\\n!kaggle competitions download -c early-detection-of-3d-printing-issues\\n!unzip *.zip\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
+      "cell_type": "markdown",
+      "source": [
+        "Kaggle Competition: Early detection of 3D printing issues\n",
+        "\n",
+        "The goal of the project is to build a model to detect a common error in 3D printing - under extrusion - at an early stage.\n",
+        "\n",
+        "Wing Man Casca, Kwok\n",
+        "Apr 11 2023"
       ],
+      "metadata": {
+        "id": "Q3RflbZgEc2o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I1i1XBoO7CIU"
+      },
+      "outputs": [],
       "source": [
         "%cd \"/content/drive/MyDrive/Colab Notebooks/3D_Printing\"\n",
         "\n",
@@ -62,7 +50,7 @@
         "import torch.nn.functional as F\n",
         "from torchvision import models, datasets, transforms\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from PIL import Image                                       #convert Images to tensor\n",
+        "from PIL import Image                                       \n",
         "from torch.utils.data import Dataset, DataLoader\n",
         "import cv2\n",
         "import torchvision.transforms as T\n",
@@ -83,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "EiFtCSEp8sXg"
       },
@@ -99,12 +87,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "OUeMmsYG8s7W"
       },
       "outputs": [],
       "source": [
+        "# check GPU resources\n",
         "def check_processor():\n",
         "    \n",
         "    if torch.cuda.is_available():\n",
@@ -119,12 +108,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "YvDxKj71_Y31"
       },
       "outputs": [],
       "source": [
+        "# EDA\n",
         "def EDA(df, images):\n",
         "    \n",
         "    print(\"EDA:\", \"\\n\")\n",
@@ -138,12 +128,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "hQXkdAEy_t5c"
       },
       "outputs": [],
       "source": [
+        "# display dataset for EDA\n",
         "def plot(images, labels, path):\n",
         "    \n",
         "    plt.subplots(figsize=(15, 15))\n",
@@ -165,12 +156,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "0CWjpySM81Oa"
       },
       "outputs": [],
       "source": [
+        "# Dataset class to loan training and validation dataset\n",
         "class DDDPrintingDataset(Dataset):\n",
         "    \n",
         "    def __init__(self, df, image_folder, is_train=True):\n",
@@ -218,12 +210,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "DTpOtJanbkIo"
       },
       "outputs": [],
       "source": [
+        "# Dataset class to loan testing dataset\n",
         "class DDDPrintingTestingDataset(Dataset):\n",
         "    \n",
         "    def __init__(self, df, image_folder, is_train=False):\n",
@@ -252,25 +245,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "EtBr9d6QACD5"
       },
       "outputs": [],
       "source": [
+        "# training\n",
         "def train(n_epochs, model, train_loader, optimizer, log_interval, device):\n",
-        "    \n",
-        "    \n",
-        "    model_saved = torch.load('/content/drive/MyDrive/Colab Notebooks/3D_Printing/train_weight/train_weight-040802-weight-decay/model.pth', map_location=device)\n",
-        "    model.load_state_dict(model_saved)\n",
-        "    optimizer_saved = torch.load('/content/drive/MyDrive/Colab Notebooks/3D_Printing/train_weight/train_weight-040802-weight-decay/optimizer.pth', map_location=device)\n",
-        "    optimizer.load_state_dict(optimizer_saved)\n",
-        "    \n",
-        "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=-1)\n",
-        "    \n",
-        "    model.to(device)\n",
-        "    model.train()\n",
-        "    \n",
+        "       \n",
         "    start_time = time.time()\n",
         "  \n",
         "    train_losses = []\n",
@@ -278,7 +261,6 @@
         "    pred_list = []\n",
         "    labels_list = []\n",
         "    criterion = nn.CrossEntropyLoss()\n",
-        "    best_loss = 100\n",
         "            \n",
         "    for batch_idx, (images, labels, _) in enumerate(train_loader):\n",
         "        images, labels = images.to(device), labels.to(device)\n",
@@ -318,17 +300,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "BnERUUnJCDQl"
       },
       "outputs": [],
       "source": [
+        "# validation\n",
         "def validate(model, val_loader, device):\n",
-        "\n",
-        "    #load the internal state of the network and optimizer when we last saved them.\n",
-        "    model_saved = torch.load('/content/drive/MyDrive/Colab Notebooks/3D_Printing/train_weight/train_weight-0414 224x224 transform seq clear 10 epochs full dataset scheduler/model.pth')\n",
-        "    model.load_state_dict(model_saved)\n",
         "\n",
         "    model.to(device)\n",
         "    model.eval()\n",
@@ -348,7 +327,7 @@
         "            val_transform2, val_transform3, val_transform4 = val_transform2.to(device), val_transform3.to(device), val_transform4.to(device) \n",
         "            \n",
         "            \"\"\"\n",
-        "            # ensembel 4 transforms and take the average probability\n",
+        "            # ensemble 4 transforms and take the average probability\n",
         "            output1 = model(image)\n",
         "            output2 = model(val_transform2)\n",
         "            output3 = model(val_transform3)\n",
@@ -383,13 +362,12 @@
         "    test_losses.append(test_loss)\n",
         "    accuracy = 100. * correct / len(val_loader.dataset)\n",
         "    \n",
-        "    print('\\nTest set: Avg. loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(test_loss, correct, len(val_loader.dataset), 100. * correct / len(val_loader.dataset)))\n",
-        "    #return model_output, paths, accuracy.item()"
+        "    print('\\nTest set: Avg. loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(test_loss, correct, len(val_loader.dataset), 100. * correct / len(val_loader.dataset)))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "7ltuhOA8HlXP"
       },
@@ -440,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -526,6 +504,7 @@
         }
       ],
       "source": [
+        "# main code\n",
         "image_folder = \"/content/drive/MyDrive/Colab Notebooks/3D_Printing/images/\"\n",
         "train_label_csv_folder = \"/content/drive/MyDrive/Colab Notebooks/3D_Printing/train.csv\"\n",
         "test_label_csv_folder = \"/content/drive/MyDrive/Colab Notebooks/3D_Printing/test.csv\"\n",
@@ -557,35 +536,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XkCi8xWwnw1I",
-        "outputId": "cfa2c4d6-a6a9-4808-e701-5d0aaf31ebe5"
+        "id": "XkCi8xWwnw1I"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Using cuda\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.9/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet34_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet34_Weights.DEFAULT` to get the most up-to-date weights.\n",
-            "  warnings.warn(msg)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "# choose CNN models\n",
         "device = check_processor()\n",
         "\n",
         "model = models.resnet34(pretrained=True)\n",
@@ -601,15 +558,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "uRwGwhHCb4G3"
       },
       "outputs": [],
       "source": [
         "# freeze layers resnet32\n",
-        "def freeze_layers(model): # has tested it affects outside function\n",
-        "  for name, param in model.named_parameters(): #k is \"model.9.cv2.bn.weight\", v is weight/bias\n",
+        "def freeze_layers(model): \n",
+        "  for name, param in model.named_parameters():  \n",
         "    if \"fc.1\" in name or \"layer4.2\" in name:\n",
         "    #if \"fc.1\" in name:\n",
         "        param.requires_grad = True\n",
@@ -620,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "Qwcrx48kCK-U"
       },
@@ -640,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3241,18 +3198,30 @@
         "start_time = time.time()\n",
         "\n",
         "# freezing shallow layer weight\n",
-        "freeze_layers(model)\n",
+        "#freeze_layers(model)\n",
+        "\n",
+        "model_saved = torch.load('/content/drive/MyDrive/Colab Notebooks/3D_Printing/train_weight/train_weight0416_cleared loan weight every epoch/model.pth', map_location=device)\n",
+        "model.load_state_dict(model_saved)\n",
+        "optimizer_saved = torch.load('/content/drive/MyDrive/Colab Notebooks/3D_Printing/train_weight/train_weight0416_cleared loan weight every epoch/optimizer.pth', map_location=device)\n",
+        "optimizer.load_state_dict(optimizer_saved)\n",
+        "\n",
+        "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=-1)\n",
+        "best_loss = 100\n",
+        "\n",
+        "model.to(device)\n",
+        "model.train()\n",
         "\n",
         "for epoch in range(1, EPOCHS + 1): \n",
         "    print(\"Training\")\n",
-        "    train(epoch, model, train_dataloader, optimizer, log_interval, device)\n",
+        "    best_loss = train(epoch, model, train_dataloader, optimizer, log_interval, device)\n",
+        "    validate(model, val_dataloader, device)\n",
         "\n",
         "total_time = time.time() - start_time"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3287,7 +3256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4087,7 +4056,7 @@
         }
       ],
       "source": [
-        "# print resnet34 model\n",
+        "# show resnet34 model\n",
         "print(torch.cuda.device_count())\n",
         "for k, v in model.named_parameters():\n",
         "  print(k)\n",
@@ -4098,50 +4067,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "87Q49I6LBchT",
-        "outputId": "693ef4fd-de71-4691-c0a5-c9286e61b282"
+        "id": "87Q49I6LBchT"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "7-Zip (a) [64] 16.02 : Copyright (c) 1999-2016 Igor Pavlov : 2016-05-21\n",
-            "p7zip Version 16.02 (locale=en_US.UTF-8,Utf16=on,HugeFiles=on,64 bits,2 CPUs Intel(R) Xeon(R) CPU @ 2.30GHz (306F0),ASM,AES-NI)\n",
-            "\n",
-            "Scanning the drive for archives:\n",
-            "  0M Scan\b\b\b\b\b\b\b\b\b         \b\b\b\b\b\b\b\b\b1 file, 12165144075 bytes (12 GiB)\n",
-            "\n",
-            "Extracting archive: early-detection-of-3d-printing-issues.zip\n",
-            "  3% 4096 Open\b\b\b\b\b\b\b\b\b\b\b\b\b\b              \b\b\b\b\b\b\b\b\b\b\b\b\b\b--\n",
-            "Path = early-detection-of-3d-printing-issues.zip\n",
-            "Type = zip\n",
-            "Physical Size = 12165144075\n",
-            "64-bit = +\n",
-            "\n",
-            "  0%\b\b\b\b    \b\b\b\b\n",
-            "Would you like to replace the existing file:\n",
-            "  Path:     ./images/022/1672709609/1672709790.713084.jpg\n",
-            "  Size:     184186 bytes (180 KiB)\n",
-            "  Modified: 2023-03-23 19:04:00\n",
-            "with the file from archive:\n",
-            "  Path:     images/022/1672709609/1672709790.713084.jpg\n",
-            "  Size:     184186 bytes (180 KiB)\n",
-            "  Modified: 2023-03-23 19:04:00\n",
-            "? (Y)es / (N)o / (A)lways / (S)kip all / A(u)to rename all / (Q)uit? S\n",
-            "\n",
-            "  0%\b\b\b\b    \b\b\b\b  1%\b\b\b\b    \b\b\b\b  2%\b\b\b\b    \b\b\b\b  3%\b\b\b\b    \b\b\b\b  4%\b\b\b\b    \b\b\b\b  5%\b\b\b\b    \b\b\b\b  6%\b\b\b\b    \b\b\b\b  7%\b\b\b\b    \b\b\b\b  8%\b\b\b\b    \b\b\b\b  9%\b\b\b\b    \b\b\b\b 10%\b\b\b\b    \b\b\b\b 11%\b\b\b\b    \b\b\b\b 12%\b\b\b\b    \b\b\b\b 13%\b\b\b\b    \b\b\b\b 14%\b\b\b\b    \b\b\b\b 15%\b\b\b\b    \b\b\b\b 16%\b\b\b\b    \b\b\b\b 17%\b\b\b\b    \b\b\b\b 18%\b\b\b\b    \b\b\b\b 19%\b\b\b\b    \b\b\b\b 20%\b\b\b\b    \b\b\b\b 21%\b\b\b\b    \b\b\b\b 22%\b\b\b\b    \b\b\b\b 23%\b\b\b\b    \b\b\b\b 24%\b\b\b\b    \b\b\b\b 25%\b\b\b\b    \b\b\b\b 26%\b\b\b\b    \b\b\b\b 27%\b\b\b\b    \b\b\b\b 28%\b\b\b\b    \b\b\b\b 29%\b\b\b\b    \b\b\b\b 30%\b\b\b\b    \b\b\b\b 31%\b\b\b\b    \b\b\b\b 32%\b\b\b\b    \b\b\b\b 33%\b\b\b\b    \b\b\b\b 34%\b\b\b\b    \b\b\b\b 35%\b\b\b\b    \b\b\b\b 36%\b\b\b\b    \b\b\b\b 37%\b\b\b\b    \b\b\b\b 38%\b\b\b\b    \b\b\b\b 39%\b\b\b\b    \b\b\b\b 40%\b\b\b\b    \b\b\b\b 41%\b\b\b\b    \b\b\b\b 42%\b\b\b\b    \b\b\b\b 43%\b\b\b\b    \b\b\b\b 44%\b\b\b\b    \b\b\b\b 45%\b\b\b\b    \b\b\b\b 46%\b\b\b\b    \b\b\b\b 47%\b\b\b\b    \b\b\b\b 48%\b\b\b\b    \b\b\b\b 49%\b\b\b\b    \b\b\b\b 50%\b\b\b\b    \b\b\b\b 51%\b\b\b\b    \b\b\b\b 52%\b\b\b\b    \b\b\b\b 53%\b\b\b\b    \b\b\b\b 54%\b\b\b\b    \b\b\b\b 55%\b\b\b\b    \b\b\b\b 56%\b\b\b\b    \b\b\b\b 57%\b\b\b\b    \b\b\b\b 58%\b\b\b\b    \b\b\b\b 59%\b\b\b\b    \b\b\b\b 60%\b\b\b\b    \b\b\b\b 61%\b\b\b\b    \b\b\b\b 62%\b\b\b\b    \b\b\b\b 63%\b\b\b\b    \b\b\b\b 64%\b\b\b\b    \b\b\b\b 65%\b\b\b\b    \b\b\b\b 66%\b\b\b\b    \b\b\b\b 67%\b\b\b\b    \b\b\b\b 68%\b\b\b\b    \b\b\b\b 69%\b\b\b\b    \b\b\b\b 70%\b\b\b\b    \b\b\b\b 71%\b\b\b\b    \b\b\b\b 72%\b\b\b\b    \b\b\b\b 73%\b\b\b\b    \b\b\b\b 74%\b\b\b\b    \b\b\b\b 75%\b\b\b\b    \b\b\b\b 76%\b\b\b\b    \b\b\b\b 77%\b\b\b\b    \b\b\b\b 78%\b\b\b\b    \b\b\b\b 79%\b\b\b\b    \b\b\b\b 80%\b\b\b\b    \b\b\b\b 81%\b\b\b\b    \b\b\b\b 82%\b\b\b\b    \b\b\b\b 83%\b\b\b\b    \b\b\b\b 84%\b\b\b\b    \b\b\b\b 85%\b\b\b\b    \b\b\b\b 86%\b\b\b\b    \b\b\b\b 87%\b\b\b\b    \b\b\b\b 88%\b\b\b\b    \b\b\b\b 89%\b\b\b\b    \b\b\b\b 90%\b\b\b\b    \b\b\b\b 91%\b\b\b\b    \b\b\b\b 92%\b\b\b\b    \b\b\b\b 93%\b\b\b\b    \b\b\b\b 94%\b\b\b\b    \b\b\b\b 95%\b\b\b\b    \b\b\b\b 96%\b\b\b\b    \b\b\b\b 97%\b\b\b\b    \b\b\b\b 98%\b\b\b\b    \b\b\b\b 99%\b\b\b\b    \b\b\b\b100%\b\b\b\b    \b\b\b\bEverything is Ok\n",
-            "\n",
-            "Files: 0\n",
-            "Size:       0\n",
-            "Compressed: 12165144075\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# unzip dataset\n",
         "#!7za x *.zip\n",
